Another accessibility small update : - [Fix] Add LeftToRight `dir` attributes - [Fix] Add title for Social networks links - [Fix] remove orphan div end tag - [Fix] Add src text before image display - [Tweak] clean meta.html code - [Tweak] Remove some whitespaces in CSS files

--- a/public/themes/bambukah/style.css
+++ b/public/themes/bambukah/style.css
@@ -2,43 +2,11 @@
 #post ul {list-style: square; padding: inherit;}
 #post h2 {font-size: 2em; font-weight:600;margin: 1% 2%;}
 #post h3 {font-size: 1.7em; font-weight:500;margin: 1% 1%;}
-h1,h2,h3,h4,h5,h6 {
-	font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-  letter-spacing: -.1rem;
-  margin-bottom: 1.0rem;
-  margin-top: 0;
-}
-
-h1 {
-  line-height: 1.2;
-}
-
-h2 {
-  line-height: 1.25;
-}
-
-h3 {
-  line-height: 1.3;
-}
-
-h4 {
-  font-size: 2.2rem;
-  letter-spacing: -.08rem;
-  line-height: 1.35;
-}
-
-h5 {
-  font-size: 1.8rem;
-  letter-spacing: -.05rem;
-  line-height: 1.5;
-}
-
-h6 {
-  font-size: 1.6rem;
-  letter-spacing: 0;
-  line-height: 1.4;
-}
-
-a {
-	text-decoration: underline;
-}
+h1,h2,h3,h4,h5,h6 {letter-spacing: -.1rem;margin-bottom: 1.0rem;margin-top: 0;}
+h1 {line-height: 1.2;}
+h2 {line-height: 1.25;}
+h3 {line-height: 1.3;}
+h4 {font-size: 2.2rem;letter-spacing: -.08rem;line-height: 1.35;}
+h5 {font-size: 1.8rem;letter-spacing: -.05rem;line-height: 1.5;}
+h6 {font-size: 1.6rem;letter-spacing: 0;line-height: 1.4;}
+a {text-decoration: underline;}
